--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/brain-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <meta name="description" content="Dr. Denker Interactive Image Puzzle - A Vue 3 web app with zoom, pan, and crossword features" />
+    <title>Dr. Denker Image Puzzle</title>
   </head>
   <body>
     <div id="app"></div>
