--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" id="app-html">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/brain-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dr. Denker Interactive Image Puzzle - A Vue 3 web app with zoom, pan, and crossword features" />
-    <title>Dr. Denker Image Puzzle</title>
+    <meta name="description" content="Dr. Denker Interactive Image Puzzle" id="app-description" />
+    <title id="app-title">Dr. Denker Image Puzzle</title>
   </head>
   <body>
     <div id="app"></div>
